# patches-bundles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
installer/windows/: patches-bundles.iss
patches-drums/: Cargo.toml
patches-drums/adrs/: 0001-sampler-module.md  0002-bridged-t-resonator-family.md
patches-drums/epics/: E001-sampler.md  E002-bridged-t-family.md  E003-modal-metal-voices.md  E004-xor-metal-voices.md  E005-modal-and-xor-voice-perf-pass.md
patches-drums/examples/: drum_machine.patches  drum_machine2.patches  drum_machine2.patches.state
patches-drums/examples/microtonal/: microtonal.patches
patches-drums/examples/song1/: drum_machine.patches  instruments.patches  song.patches  utils.patches
patches-drums/src/: clap_drum.rs  claves.rs  claves2.rs  cymbal.rs  cymbal2.rs  hihat.rs  hihat2.rs  kick.rs  kick2.rs  lib.rs  snare.rs  test_support.rs  tom.rs  tom2.rs  xor_cymbal.rs  xor_hihat.rs
patches-drums/src/primitives/: bridged_t.rs  burst.rs  envelope.rs  excitation.rs  metallic.rs  mod.rs  modal_bank.rs  saturate.rs  struck_resonator_voice.rs  sweep.rs  tpt_svf.rs  xor_pair_tone.rs
patches-drums/tickets/: TEMPLATE.md
patches-drums/tickets/closed/: 0006-bridged-t-primitive.md  0007-excitation-primitive.md  0008-kick2-module.md  0009-tom2-module.md  0010-claves2-module.md  0011-struck-resonator-voice.md  0012-modal-bank-primitive.md  0013-cymbal2-module.md  0014-hihat2-modules.md  0015-xor-pair-tone-primitive.md  0016-xor-cymbal-module.md  0017-xor-hihat-modules.md  0018-fast-tan-tpt-svf.md  0019-hp-filter-state-preservation.md  0020-xor-pair-tone-cleanup.md  0021-voice-quiescence-gate.md  0022-param-frame-rebuild-guards.md  0023-modal-bank-coef-ramp.md
patches-drums/tickets/open/: 0001-sampler-arena.md  0002-sampler-async-loader.md  0003-sampler-module-skeleton.md  0004-sampler-voice-playback.md  0005-sampler-wire-and-docs.md
patches-fft-bundle/: Cargo.toml
patches-fft-bundle/src/: lib.rs  pitch_shift.rs
patches-fft-bundle/src/convolution_reverb/: core.rs  ir_loader.rs  mod.rs  params.rs  processor.rs  stereo.rs  tests.rs
patches-fft-harness/: Cargo.toml
patches-fft-harness/src/: lib.rs  test_support.rs  window_buffer.rs
patches-fft-harness/src/partitioned_convolution/: complex.rs  convolver.rs  ir_partitions.rs  mod.rs  non_uniform.rs
patches-fft-harness/src/partitioned_convolution/tests/: complex.rs  convolver.rs  ir_partitions.rs  mod.rs  non_uniform.rs
patches-fft-harness/src/slot_deck/: active_windows.rs  config.rs  filled_slot.rs  mod.rs  overlap_buffer.rs  processor_handle.rs
patches-fft-harness/src/spectral_pitch_shift/: mod.rs  tests.rs
patches-fft-harness/tests/: fft_lowpass.rs  slot_deck.rs
patches-fft-harness/tests/slot_deck/: fft_lowpass.rs  mod.rs  ola.rs  overload.rs  pitch_shift.rs  pool.rs  round_trip.rs  support.rs  wola.rs
patches-io/: Cargo.toml
patches-io/src/: aiff.rs  audio_data.rs  lib.rs  wav_read.rs
patches-vintage/: Cargo.toml  README.md  TECHNICAL.md
patches-vintage/examples/: fdn_reverb_synth.patches  gritty_lead.patches  plucky_keys.patches  poly_synth.patches  soft_pad.patches  split_pad_lead.patches  sync_bass.patches  vintage_synth.patches  warm_pad.patches
patches-vintage/src/: bbd_clock.rs  bbd_filter_proto.rs  bbd_proto.rs  lib.rs  primitives.rs  vbbd.rs  vchorus.rs  vdco.rs  vflanger.rs  vflanger_stereo.rs  vintage_filter.rs  vladder.rs  vota_poly_vcf.rs  vota_vcf.rs  vpoly_ladder.rs  vreverb.rs  vstereobbd.rs
patches-vintage/src/bbd/: mod.rs  tests.rs
patches-vintage/src/compander/: mod.rs  tests.rs
patches-vintage/src/vchorus/: core.rs  tests.rs
patches-vintage/src/vdco/: core.rs  poly.rs  tests.rs
patches-vintage/src/vflanger/: core.rs  tests.rs
patches-vintage/src/vflanger_stereo/: core.rs
scripts/: install-bundles.sh
xtask/: Cargo.toml
xtask/src/: main.rs
