[workspace]
resolver = "2"
members = [
    "patches-io",
    "patches-vintage",
    "patches-drums",
    "patches-fft-harness",
    "patches-fft-bundle",
    "xtask",
]
default-members = [
    "patches-io",
    "patches-vintage",
    "patches-drums",
    "patches-fft-harness",
    "patches-fft-bundle",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Vulpus-Labs/patches-bundles"
categories = ["multimedia::audio"]
publish = false

[workspace.dependencies]
patches-core = "0.7"
patches-sdk = "0.7"
patches-dsp = "0.6"
patches-io = { path = "patches-io" }
rtrb = "0.3"
