[package]
name = "patches-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
publish.workspace = true
description = "AIFF/WAV reader + resampler for Patches bundle authors (impulse responses, samples)."

[lib]
name = "patches_io"
path = "src/lib.rs"
doctest = false

[dependencies]
patches-dsp = { workspace = true }
