[package]
name = "patches-vintage"
description = "Vintage-flavoured BBD, chorus, flanger, ladder, OTA-VCF and reverb modules for the Patches modular-audio framework, packaged as a cdylib bundle."
keywords = ["audio", "modular", "synthesizer", "bbd", "vintage"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
patches-sdk = { workspace = true }
patches-dsp = { workspace = true }

[dev-dependencies]
patches-sdk = { workspace = true, features = ["test-support"] }

[lib]
name = "patches_vintage"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false
